text changes to ClearCoin

--- a/ui/app/css/itcss/components/welcome-screen.scss
+++ b/ui/app/css/itcss/components/welcome-screen.scss
@@ -55,6 +55,7 @@
     text-transform: uppercase;
     margin: 35px 0 14px;
     transition: 200ms ease-in-out;
-    background-color: rgba(247, 134, 28, .9);
+    background-color: rgba(82, 159, 252, .9);
+    border-radius: 4px;
   }
 }
