--- a/ui/app/css/itcss/settings/variables.scss
+++ b/ui/app/css/itcss/settings/variables.scss
@@ -53,7 +53,7 @@ $cornflower-blue: #7057ff;
 $saffron: #f6c343;
 $dodger-blue: #3099f2;
 $zumthor: #edf7ff;
-$ecstasy: #f7861c;
+$ecstasy: #1d8af7;
 $linen: #fdf4f4;
 $oslo-gray: #8C8E94;
 
