--- a/mascara/src/app/first-time/index.css
+++ b/mascara/src/app/first-time/index.css
@@ -123,6 +123,14 @@
     width: calc(100vw - 80px);
   }
 
+  .bakup-phrase {
+    margin: 24px;
+    margin-top: 6px;
+    display: flex;
+    flex-flow: column nowrap;
+    width: calc(100vw - 80px);
+  }
+
   .create-password__title,
   .unique-image__title,
   .tou__title,
@@ -227,6 +235,7 @@
   color: #1B344D;
   font-size: 40px;
   line-height: 51px;
+  margin-top: 6px;
   margin-bottom: 24px;
 }
 
