Changed button color

--- a/ui/app/css/itcss/components/buttons.scss
+++ b/ui/app/css/itcss/components/buttons.scss
@@ -164,7 +164,7 @@ input[type="submit"][disabled] {
 
 button.primary {
   padding: 8px 12px;
-  background: #f7861c;
+  background: #1d8af7;
   box-shadow: 0 3px 6px rgba(247, 134, 28, .36);
   color: $white;
   font-size: 1.1em;
