Changed version #. Refactored info page.

--- a/ui/app/css/itcss/components/sections.scss
+++ b/ui/app/css/itcss/components/sections.scss
@@ -46,7 +46,7 @@ textarea.twelve-word-phrase {
 /* unlock */
 .error {
   // color: #e20202;
-  color: #f7861c;
+  color: #2f9ae0;
   margin-bottom: 9px;
 }
 
