mode selection toggle frontend

--- a/ui/app/components/index.scss
+++ b/ui/app/components/index.scss
@@ -2,7 +2,7 @@
 
 @import './export-text-container/index';
 
-@import './selected-account/index';
+@import './mode-selector/index';
 
 @import './info-box/index';
 
