--- a/ui/app/components/mode-selector/index.scss
+++ b/ui/app/components/mode-selector/index.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     flex: 1;
+    user-select: none;
 
     &__name {
         max-width: 200px;
