--- a/ui/app/css/itcss/components/welcome-screen.scss
+++ b/ui/app/css/itcss/components/welcome-screen.scss
@@ -1,61 +1,59 @@
 .welcome-screen {
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  font-family: Roboto;
-  font-weight: 400;
-  width: 100%;
-  flex: 1 0 auto;
-  padding: 70px 0;
-  background: $white;
-
-  @media screen and (max-width: 575px) {
-    padding: 0;
-  }
-
-  &__info {
     display: flex;
     flex-flow: column;
-    width: 100%;
-    height: 100%;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    font-family: Roboto;
+    font-weight: 400;
+    width: 100%;
+    flex: 1 0 auto;
+    padding: 70px 0;
+    background: $white;
 
-    &__header {
-      font-size: 1.65em;
-      margin-bottom: 14px;
-
-      @media screen and (max-width: 575px) {
-        font-size: 1.5em;
-      }
+    @media screen and (max-width: 575px) {
+        padding: 0;
     }
 
-    &__copy {
-      font-size: 1em;
-      width: 400px;
-      max-width: 90vw;
-      text-align: center;
+    &__info {
+        display: flex;
+        flex-flow: column;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
 
-      @media screen and (max-width: 575px) {
-        font-size: .9em;
-      }
+        &__header {
+            font-size: 1.65em;
+            margin-bottom: 14px;
+
+            @media screen and (max-width: 575px) {
+                font-size: 1.5em;
+            }
+        }
+
+        &__copy {
+            font-size: 1em;
+            color: #777;
+            width: 400px;
+            max-width: 90vw;
+            text-align: center;
+        }
     }
-  }
 
-  &__button {
-    height: 54px;
-    width: 198px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .14);
-    color: #fff;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 26px;
-    text-align: center;
-    text-transform: uppercase;
-    margin: 35px 0 14px;
-    transition: 200ms ease-in-out;
-    background-color: rgba(82, 159, 252, .9);
-    border-radius: 4px;
-  }
+    &__button {
+        height: 54px;
+        width: 198px;
+        padding-top: 2px;
+        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .14);
+        color: #fff;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 26px;
+        text-align: center;
+        text-transform: uppercase;
+        margin: 35px 0 14px;
+        transition: 200ms ease-in-out;
+        background-color: rgba(82, 159, 252, .9);
+        border-radius: 4px;
+    }
 }
