message: no outgoing transactions...

--- a/ui/app/css/itcss/components/transaction-list.scss
+++ b/ui/app/css/itcss/components/transaction-list.scss
@@ -282,6 +282,9 @@
   }
 
   &--empty {
+    font-size: 12px;
+    font-style: italic;
+    color: #888;
     text-align: center;
     border-bottom: none !important;
     padding: 16px;
