--- a/ui/app/components/pages/unlock-page/index.scss
+++ b/ui/app/components/pages/unlock-page/index.scss
@@ -29,7 +29,7 @@
 
   &__form {
     width: 100%;
-    margin: 56px 0 8px;
+    margin: 25px 0 8px;
   }
 
   &__links {
@@ -48,4 +48,16 @@
       margin-top: 10px;
     }
   }
-}
+
+  button {
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
+    color: #fff;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 200ms ease-in-out;
+    background-color: rgba(82, 159, 252, 0.9);
+    border-radius: 4px;
+  }
+}    
