--- a/ui/app/components/pages/unlock-page/index.scss
+++ b/ui/app/components/pages/unlock-page/index.scss
@@ -53,11 +53,11 @@
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.14);
     color: #fff;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 500 !important;
     text-align: center;
     text-transform: uppercase;
     transition: 200ms ease-in-out;
-    background-color: rgba(82, 159, 252, 0.9);
+    background-color: rgba(82, 159, 252, 0.9) !important;
     border-radius: 4px;
   }
 }    
