basic referrals ui layout

--- a/ui/app/css/itcss/components/transaction-list.scss
+++ b/ui/app/css/itcss/components/transaction-list.scss
@@ -284,6 +284,7 @@
   &--empty {
     font-size: 12px;
     font-style: italic;
+    font-weight: 300;
     color: #888;
     text-align: center;
     border-bottom: none !important;
