retrieve and display users referral code (from signed request)

--- a/ui/app/components/referrals/index.scss
+++ b/ui/app/components/referrals/index.scss
@@ -1,7 +1,7 @@
 .referrals {
     width: 100%;
     text-align: left;
-    font-size: 14px;
+    font-size: 13px;
     color: #777;
 
     .referrals-explanation {
@@ -11,6 +11,7 @@
     strong.callout-heading {
         color: #58A2FC;
         text-transform: uppercase;
+        font-size: 14px;
         /* font-weight: 500; */
     }
 
@@ -20,6 +21,12 @@
 
     .clearybot {
         height: 106px;
+        margin-right: -10px;
+        margin-left: -8px;
         float: left;
+    }
+
+    button.wallet-view__address {
+        margin-top: 3px;
     }
 }
