--- a/mascara/src/app/first-time/index.css
+++ b/mascara/src/app/first-time/index.css
@@ -314,6 +314,7 @@
 .backup-phrase__phrase {
   flex-grow: .5;
   min-width: 0;
+  max-width: 100% !important;
 }
 
 .backup-phrase__next-button {
@@ -330,6 +331,7 @@
   width: 285px;
   flex-grow: .5;
   min-width: 0;
+  max-width: 100% !important;
 }
 
 .backup-phrase__tips-text {
